feat: add auth register
